samples/_failures_safe/1761633360_6716f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a7c8a10b.c: In function ‘main’:
./samples/SAFE/__tmp_a7c8a10b.c:202:9: error: expected expression at end of input
  202 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_a7c8a10b.c:202:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a7c8a10b.c:202:9: error: expected declaration or statement at end of input
